# Self-Learning-in-the-Inverse-Kinematics-of-Robotic-Arm

./: .gitignore  README.md  paper.html  paper.md  test.md
AuraArmVrep/: AuraArmVrep.h
RemoteAPI/: CMakeLists.txt  main.cpp
RemoteAPI/AuraArmVrep/: AuraArmVrep.cpp  AuraArmVrep.h
RemoteAPI/Extras/: extras.cpp  extras.h
RemoteAPI/SOM/: SOM.cpp  SOM.h  Test.h
RemoteAPI/Vdc/: Vdc.h
RemoteAPI/nbproject/: configurations.xml
RemoteAPI/nbproject/private/: Default.properties  configurations.xml  private.xml
SOM/: Node.cpp  Sample.h  Test.cpp
Scene_Vrep/: AuraRoboticArm.ttt  AuraRoboticArmOpenCV.ttt
Vdc/: Vdc.cpp  Vdc.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties
